# all_math

./: CMakeLists.txt
metal_benchmark/: CMakeLists.txt  main.cpp  old_main.cpp
metal_math/: CMakeLists.txt  README.md  math.metal
metal_math/include/: container_traits.h  create_function.h  function.h  metal.h  metal_allocator.h  metal_container_conversions.h  metal_definition.h
metal_math/metal/Metal/: Metal.hpp
metal_math/src/: command_queue.cpp  command_queue.h  create_function.cpp  device.cpp  device.h  function.cpp  library.cpp  library.h  metal.cpp  metal_allocator.cpp
metal_test/: CMakeLists.txt  main.cpp  old_main.cpp
normal_math/: CMakeLists.txt
normal_math/include/: normal.h  normal_container_traits.h
